added conditional directive to compile with/without CrestronLogger support

--- a/SimplMQTT/SimplMQTT.Client.csproj
+++ b/SimplMQTT/SimplMQTT.Client.csproj
@@ -44,7 +44,7 @@
     <NoStdLib>true</NoStdLib>
     <NoConfig>true</NoConfig>
     <GenerateSerializationAssemblies>off</GenerateSerializationAssemblies>
-    <DefineConstants>USE_SSL</DefineConstants>
+    <DefineConstants>USE_SSL USE_LOGGER</DefineConstants>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release-NoSSL|AnyCPU' ">
     <NoStdLib>true</NoStdLib>
@@ -54,6 +54,9 @@
     <Optimize>true</Optimize>
     <PlatformTarget>AnyCPU</PlatformTarget>
     <ErrorReport>prompt</ErrorReport>
+    <DebugSymbols>true</DebugSymbols>
+    <DebugType>full</DebugType>
+    <DefineConstants>USE_LOGGER</DefineConstants>
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="mscorlib" />
