Removed USE_LOGGER debug symbol

--- a/SimplMQTT/SimplMQTT.Client.csproj
+++ b/SimplMQTT/SimplMQTT.Client.csproj
@@ -44,7 +44,8 @@
     <NoStdLib>true</NoStdLib>
     <NoConfig>true</NoConfig>
     <GenerateSerializationAssemblies>off</GenerateSerializationAssemblies>
-    <DefineConstants>USE_LOGGER</DefineConstants>
+    <DefineConstants>
+    </DefineConstants>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release-NoSSL|AnyCPU' ">
     <NoStdLib>true</NoStdLib>
